--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 
       // You can adjust the scroll position trigger (e.g. 300)
       if (scrollY > 300) {
-        body.style.backgroundImage = "url('cig2.jpg')";
+        body.style.backgroundImage = "url('smoking in dark.jpg')";
       } else {
         body.style.backgroundImage = "url('cig wallpaper.jpg')";
       }
