--- a/product.html
+++ b/product.html
@@ -127,7 +127,7 @@
         <div class="product"><img src="lucky strike cig.JPG" alt=""><p class="LUCKY STRIKE CIGARETTES">Tobacco 4</p></div>
         <div class="product"><img src="hupman.jpg" alt=""><p class="HUPMAN CIGARETTES">Tobacco 5</p></div>
         <div class="product"><img src="waltz.jpeg" alt=""><p class="WALTZ CIGARETTES">Tobacco 6</p></div>
-        <div class="product"><img src="inverroche Limestone Rum.jpeg" alt=""><p class="ILR CIGARETTES">Tobacco 7</p></div>
+        <div class="product"><img src="marlboro.JPG" alt=""><p class=" VINTAGE MARLBORO CIGARETTES">Tobacco 7</p></div>
         <div class="product"><img src="brown bear herbs.jpg" alt=""><p class="BROWN BEAR CIGARETTES">Tobacco 8</p></div>
         <div class="product"><img src="newport mentol.jpeg" alt=""><p class="NEWPORT CIGARETTES">Tobacco 9</p></div>
       </div>
@@ -180,7 +180,7 @@
     <section class="category" id="other">
       <h2>Other Products</h2>
       <div class="product-grid">
-        <div class="product"><img src="marlboro table.jpeg" alt=""><p class="CUSTOM MARLBORO TABLE">Other 1</p></div>
+        <div class="product"><img src="burn baby burn ash tray.JPG" alt=""><p class="BBB ASH TRAY">Other 1</p></div>
         <div class="product"><img src="marlboro ash tray.jpeg" alt=""><p class="CUSTOM MARLBORO ASH TRAY">Other 2</p></div>
         <div class="product"><img src="marlboro drawer.jpeg" alt=""><p class="CUSTOM MARALBORO DRAWER">Other 3</p></div>
         <div class="product"><img src="only for hot person ash tray.JPG" alt=""><p class="OFHP ASH TRAY">Other 4</p></div>
