--- a/about.html
+++ b/about.html
@@ -121,5 +121,61 @@
     });
   </script>
 
+<main>
+  <h2>Premium Quality, Timeless Tradition</h2>
+  <p>
+    At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
+    From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings
+    are designed for those who appreciate sophistication with an edge. Each product embodies bold character,
+    meticulous quality, and a taste for the unapologetically distinct. This is not just a brand—it’s a statement.
+  </p>
+  <p>
+    We blend tradition with innovation to offer a <strong>superior smoking experience</strong>—ensuring smoothness,
+    rich flavor, and exceptional quality.
+  </p>
+  <p>
+    Welcome to <strong>GrimmDraw</strong> – where sophistication meets indulgence.
+  </p>
+</main>
+
+<!-- New Lower Section -->
+<section style="margin: 50px auto; max-width: 800px; background: rgba(0,0,0,0.6); padding: 30px; border-radius: 10px;">
+  <h2 style="margin-bottom: 20px;">Our Story</h2>
+  <p>
+    GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
+    collection of boutique cigarette blends quickly evolved into a bold, full-spectrum lifestyle brand. Today, we
+    serve connoisseurs across the globe with products that honor both history and progress.
+  </p>
+  <br />
+  <h2 style="margin-top: 40px; margin-bottom: 20px;">Our Mission</h2>
+  <p>
+    To provide premium, innovative, and stylish nicotine experiences while maintaining a strong commitment to quality,
+    satisfaction, and creative expression.
+  </p>
+  <br />
+  <h2 style="margin-top: 40px; margin-bottom: 20px;">Our Vision</h2>
+  <p>
+    To be the leading name in alternative nicotine culture—celebrated for originality, quality, and a bold voice in a
+    crowded market.
+  </p>
+</section>
+
+<footer>
+  <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
+</footer>
+
+<script>
+  window.addEventListener("scroll", () => {
+    const scrollY = window.scrollY;
+    const body = document.body;
+
+    if (scrollY > 300) {
+      body.style.backgroundImage = "url('smoking in dark.jpg')";
+    } else {
+      body.style.backgroundImage = "url('cig wallpaper.jpg')";
+    }
+  });
+</script>
+
 </body>
 </html>
