--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="feedback.html">feedback</a>
+
+ <div class="nav-right">
+    <input type="text" placeholder="Search..." class="search-input">
+    <a href="login.html" class="login-link">Login</a>
+  </div>   
+    
     </nav>
 
 
