--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,12 +16,11 @@
     html, body {
       height: 100%;
       font-family: Arial, sans-serif;
-      text-align: center;
       color: white;
-      transition: background-image 1s ease-in-out;
       background: url('cig wallpaper.jpg') no-repeat center center fixed;
       background-size: cover;
-      overflow-x: hidden;
+      transition: background-image 1s ease-in-out;
+      scroll-behavior: smooth;
     }
 
     body {
@@ -33,6 +33,7 @@
       padding: 20px;
       font-size: 24px;
       font-weight: bold;
+      text-align: center;
     }
 
     nav {
@@ -56,6 +57,10 @@
       color: #f8c471;
     }
 
+    .spacer {
+      height: 40px; /* Space between nav and hero */
+    }
+
     .hero-section {
       height: 100vh;
       display: flex;
@@ -64,22 +69,22 @@
       align-items: center;
       background: rgba(0, 0, 0, 0.6);
       padding: 40px;
-      max-width: 900px;
       margin: 0 auto;
+      max-width: 900px;
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
     }
 
-    .content-section {
+    .scroll-section {
+      padding: 60px 20px;
       max-width: 900px;
-      margin: 60px auto;
+      margin: 0 auto 60px auto;
       background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
     }
 
-    .content-section h2 {
+    .scroll-section h2 {
       margin: 30px 0 10px;
     }
 
@@ -108,11 +113,15 @@
     <a href="feedback.html">Feedback</a>
   </nav>
 
+  <div class="spacer"></div>
+
   <!-- Fullscreen Hero Section -->
   <section class="hero-section">
     <h2>Premium Quality, Timeless Tradition</h2>
     <p>
-      At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences. From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings are designed for those who appreciate sophistication with an edge.
+      At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
+      From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings are
+      designed for those who appreciate sophistication with an edge.
     </p>
     <p>
       Each product embodies bold character, meticulous quality, and a taste for the unapologetically distinct.
@@ -122,8 +131,8 @@
     </p>
   </section>
 
-  <!-- Scrollable Content Section -->
-  <section class="content-section">
+  <!-- Scrollable Story/Mission/Vision Section -->
+  <section class="scroll-section">
     <h2>Our Story</h2>
     <p>
       GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
