--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,8 +18,27 @@
       color: white;
       background: url('cig wallpaper.jpg') no-repeat center center fixed;
       background-size: cover;
-      transition: background-image 1s ease-in-out;
       scroll-behavior: smooth;
+      overflow-x: hidden;
+    }
+
+    /* Background overlay for fade effect */
+    .bg-fade {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('smoking in dark.jpg') no-repeat center center fixed;
+      background-size: cover;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 1s ease-in-out;
+      z-index: -1;
+    }
+
+    .bg-fade.active {
+      opacity: 1;
     }
 
     body {
@@ -34,6 +52,7 @@
       font-size: 24px;
       font-weight: bold;
       text-align: center;
+      z-index: 1;
     }
 
     nav {
@@ -42,6 +61,7 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      z-index: 1;
     }
 
     nav a {
@@ -58,7 +78,7 @@
     }
 
     .spacer {
-      height: 40px; /* Space between nav and hero */
+      height: 40px;
     }
 
     .hero-section {
@@ -73,6 +93,7 @@
       max-width: 900px;
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+      z-index: 1;
     }
 
     .scroll-section {
@@ -82,6 +103,7 @@
       background: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+      z-index: 1;
     }
 
     .scroll-section h2 {
@@ -95,11 +117,14 @@
       text-align: center;
       width: 100%;
       margin-top: auto;
+      z-index: 1;
     }
   </style>
 </head>
 
 <body>
+  <!-- Background transition layer -->
+  <div class="bg-fade" id="fadeBg"></div>
 
   <header>
     <h1>About GrimmDraw</h1>
@@ -115,63 +140,61 @@
 
   <div class="spacer"></div>
 
-  <!-- Fullscreen Hero Section -->
- <section class="hero-section">
-  <h2>Premium Quality, Timeless Tradition</h2>
-  <p>
-    At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
-    From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings are
-    designed for those who appreciate sophistication with an edge.
-  </p>
-  <p>
-    Each product embodies bold character, meticulous quality, and a taste for the unapologetically distinct.
-  </p>
-  <p>
-    Welcome to <strong>GrimmDraw</strong> – where sophistication meets indulgence.
-  </p>
-</section>
+  <section class="hero-section">
+    <h2>Premium Quality, Timeless Tradition</h2>
+    <p>
+      At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
+      From rich, hand-crafted cigarettes to cutting-edge vape innovations and refined nicotine blends, our offerings are
+      designed for those who appreciate sophistication with an edge.
+    </p>
+    <p>
+      Each product embodies bold character, meticulous quality, and a taste for the unapologetically distinct.
+    </p>
+    <p>
+      Welcome to <strong>GrimmDraw</strong> – where sophistication meets indulgence.
+    </p>
+  </section>
 
-<!-- Separator -->
-<div class="spacer" style="height: 80px;"></div>
+  <div class="spacer" style="height: 80px;"></div>
 
-<!-- Story, Mission, Vision Section -->
-<section class="scroll-section">
-  <h2>Our Story</h2>
-  <p>
-    GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
-    collection of boutique cigarette blends quickly evolved into a bold, full-spectrum lifestyle brand. Today, we
-    serve connoisseurs across the globe with products that honor both history and progress.
-  </p>
+  <section class="scroll-section">
+    <h2>Our Story</h2>
+    <p>
+      GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
+      collection of boutique cigarette blends quickly evolved into a bold, full-spectrum lifestyle brand. Today, we
+      serve connoisseurs across the globe with products that honor both history and progress.
+    </p>
 
-  <h2>Our Mission</h2>
-  <p>
-    To provide premium, innovative, and stylish nicotine experiences while maintaining a strong commitment to quality,
-    satisfaction, and creative expression.
-  </p>
+    <h2>Our Mission</h2>
+    <p>
+      To provide premium, innovative, and stylish nicotine experiences while maintaining a strong commitment to quality,
+      satisfaction, and creative expression.
+    </p>
 
-  <h2>Our Vision</h2>
-  <p>
-    To be the leading name in alternative nicotine culture—celebrated for originality, quality, and a bold voice in a
-    crowded market.
-  </p>
-</section>
-  
+    <h2>Our Vision</h2>
+    <p>
+      To be the leading name in alternative nicotine culture—celebrated for originality, quality, and a bold voice in a
+      crowded market.
+    </p>
+  </section>
+
   <footer>
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
   </footer>
 
- <script>
-  window.addEventListener("scroll", () => {
-    const scrollY = window.scrollY;
-    const body = document.body;
+  <script>
+    const fadeBg = document.getElementById("fadeBg");
 
-    if (scrollY > window.innerHeight * 0.7) {
-      body.style.backgroundImage = "url('smoking in dark.jpg')";
-    } else {
-      body.style.backgroundImage = "url('cig wallpaper.jpg')";
-    }
-  });
-</script>
-  
+    window.addEventListener("scroll", () => {
+      const scrollY = window.scrollY;
+      const triggerPoint = window.innerHeight * 0.7;
+
+      if (scrollY > triggerPoint) {
+        fadeBg.classList.add("active");
+      } else {
+        fadeBg.classList.remove("active");
+      }
+    });
+  </script>
 </body>
 </html>
