--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     }
 
     body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      min-height: 200vh; /* to allow scroll */
       font-family: Arial, sans-serif;
-      text-align: center;
       color: white;
       background: black;
       overflow-x: hidden;
@@ -28,51 +25,53 @@
       padding: 20px;
       font-size: 24px;
       font-weight: bold;
+      text-align: center;
+      position: relative;
+      z-index: 2;
     }
-    
-nav {
-  background: black;
-  padding: 15px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  flex-wrap: wrap;
-  
-}
 
-.nav-left {
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-}
+    nav {
+      background: black;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      flex-wrap: wrap;
+      z-index: 2;
+    }
 
-.nav-left a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-}
+    .nav-left {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+    }
 
-.nav-left a:hover {
-  text-decoration: underline;
-  color: #f8c471;
-}
+    .nav-left a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+    }
 
-.nav-right {
-  position: absolute;
-  right: 20px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}   
-   
+    .nav-left a:hover {
+      text-decoration: underline;
+      color: #f8c471;
+    }
+
+    .nav-right {
+      position: absolute;
+      right: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
     .search-input {
       padding: 8px 14px;
       font-size: 16px;
       border-radius: 5px;
       border: none;
-      margin-right: 10px;
       width: 200px;
     }
 
@@ -84,7 +83,6 @@ nav {
       padding: 8px 16px;
       background-color: #444;
       border-radius: 6px;
-      margin-left: 10px;
       transition: background-color 0.3s ease;
     }
 
@@ -96,13 +94,15 @@ nav {
 
     .background-container {
       display: flex;
-      flex-grow: 1;
       width: 100%;
+      height: 100vh;
+      transition: opacity 1s ease-in-out;
+      z-index: 1;
+      position: relative;
     }
 
     .bg-image {
       flex: 1;
-      height: 100vh;
       background-size: cover;
       background-position: center;
     }
@@ -111,16 +111,39 @@ nav {
     .bg2 { background-image: url('guy holding cig.jpg'); }
     .bg3 { background-image: url('couple smoking.jpg'); }
 
+    .background-container.fade-out {
+      opacity: 0.3;
+    }
+
+    .bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+      z-index: 0;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      pointer-events: none;
+    }
+
+    .bg-video.active {
+      opacity: 1;
+    }
+
     main {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      margin-top: -50vh;
       background: rgba(0, 0, 0, 0.6);
-      padding: 20px;
+      padding: 30px 20px;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
       max-width: 90%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     footer {
@@ -129,11 +152,11 @@ nav {
       font-size: 14px;
       text-align: center;
       width: 100%;
-      position: fixed;
-      bottom: 0;
+      position: relative;
+      z-index: 2;
+      margin-top: 50px;
     }
 
-    /* Responsive Design */
     @media (max-width: 768px) {
       nav {
         flex-direction: column;
@@ -145,14 +168,6 @@ nav {
         align-items: flex-start;
         width: 100%;
         margin-top: 10px;
-      }
-
-      .nav-left a {
-        margin: 5px 0;
-      }
-
-      .nav-right {
-        margin-top: 15px;
       }
 
       .search-input {
@@ -174,38 +189,7 @@ nav {
       .bg-image {
         height: 50vh;
       }
-
-      main {
-        top: 40%;
-      }
     }
-  .bg-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 1s ease-in-out;
-}
-
-.bg-video.active {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-#backgroundImages {
-  transition: opacity 1s ease-in-out;
-}
-
-#backgroundImages.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-}
   </style>
 </head>
 <body>
@@ -225,7 +209,6 @@ nav {
 
     <div class="nav-right">
       <input type="text" placeholder="Search..." class="search-input" id="searchInput">
-      <button onclick="goToProductPage()" class="search-button">Search</button>
       <a href="login.html" class="login-link">Login</a>
       <a href="signup.html" class="signup-link">Sign Up</a>
     </div>
@@ -238,10 +221,9 @@ nav {
     <div class="bg-image bg3"></div>
   </div>
 
-  <!-- Background Video (Hidden initially) -->
+  <!-- Background Video -->
   <video id="bgVideo" class="bg-video" autoplay muted loop playsinline>
     <source src="smoking b roll.mov" type="video/mp4" />
-    
   </video>
 
   <main>
@@ -253,22 +235,21 @@ nav {
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
   </footer>
 
-  <!-- JavaScript for scroll-to-video -->
+  <!-- Scroll Script -->
   <script>
-  const bgVideo = document.getElementById('bgVideo');
-  const bgImages = document.getElementById('backgroundImages');
+    const bgVideo = document.getElementById('bgVideo');
+    const bgImages = document.getElementById('backgroundImages');
 
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 100) {
-      bgVideo.classList.add('active');
-      bgImages.classList.add('hidden');
-    } else {
-      bgVideo.classList.remove('active');
-      bgImages.classList.remove('hidden');
-  
-  }
-</script>
-  
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 100) {
+        bgVideo.classList.add('active');
+        bgImages.classList.add('fade-out');
+      } else {
+        bgVideo.classList.remove('active');
+        bgImages.classList.remove('fade-out');
+      }
+    });
+  </script>
+
 </body>
-
 </html>
